<resources>
    <string name="app_name">Scooter</string>
    <string name="mabox_access_token">pk.eyJ1Ijoia25lbWkiLCJhIjoiY2p0eGF2MnkwMHg4aTQ0cGxxNmppZG51ZyJ9.sizEB0ZAWhpulsFUFhGVFw</string>
    <string name="login_label">Введите свой номер</string>
    <string name="login_sub_label">Мы отправим код для подтверждения номера телефона.</string>
    <string name="login_agree"><u>Cогласен с пользовательским соглашением</u></string>
    <string name="login_get_code">Запросить код</string>
    <string name="login_agree_and_get_code">Согласиться и запросить код</string>
    <string name="login_oops">Что-то пошло не так. Проверьте правильность введённых данных</string>
    <string name="login_code">Код подтверждения</string>
    <string name="login_input_code">Введите код, высланный на номер</string>
    <string name="login_request_code_again">Запросить код повторно</string>
    <string name="login_ticker_text">Отправить код снова через</string>
    <string name="login_tutorial_label_1">Начало поездки</string>
    <string name="login_tutorial_body_1">Найдите свой скутер на карте, подойдите, отсканируйте его QR-код возле руля.</string>
    <string name="login_tutorial_label_2">Открой замок</string>
    <string name="login_tutorial_body_2">Открой замок. После включения самоката, выньте трос из гнезда, в месте, указанном стрелкой. Если самокат без электрического замка, отстегните карабин.</string>
    <string name="login_tutorial_label_3">Как набрать скорость</string>
    <string name="login_tutorial_body_3">Оттолкнитесь ногой для начала движения, используйте правый рычаг для ускорения</string>
    <string name="login_tutorial_label_4">Катайтесь безопасно</string>
    <string name="login_tutorial_body_4">Пожалуйста, не выезжайте на проезжую часть, не ускоряйтесь возле пешеходов.</string>
    <string name="login_tutorial_label_5">Места для катания</string>
    <string name="login_tutorial_body_5">В некоторых районах катание и парковка не разрешены. Мы покажем на карте.</string>
    <string name="login_tutorial_label_6">Паркуйте ответственно</string>
    <string name="login_tutorial_body_6">Пожалуйста, не блокируйте дороги и оставляйте место для пешеходов.</string>
    <string name="privacy_policy_label">Политика конфиденциальности</string>
    <string name="privacy_policy_data">
        Значимость этих проблем настолько очевидна, что новая модель организационной деятельности влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации модели развития. Таким образом консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.\n\n
        Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет выполнять важные задания по разработке форм развития. Таким образом новая модель организационной деятельности влечет за собой процесс внедрения и модернизации систем массового участия. Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.\n\n
        Равным образом реализация намеченных плановых заданий требуют определения и уточнения форм развития. Разнообразный и богатый опыт реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Повседневная практика показывает, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий требуют определения и уточнения соответствующий условий активизации.\n\n
        Задача организации, в особенности же рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития.
    </string>
    <string name="user_agreement_label">Пользовательское соглашение</string>
    <string name="user_agreement_data">
         Значимость этих проблем настолько очевидна, что новая модель организационной деятельности влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации модели развития. Таким образом консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.\n\n
        Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет выполнять важные задания по разработке форм развития. Таким образом новая модель организационной деятельности влечет за собой процесс внедрения и модернизации систем массового участия. Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.\n\n
        Равным образом реализация намеченных плановых заданий требуют определения и уточнения форм развития. Разнообразный и богатый опыт реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Повседневная практика показывает, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий требуют определения и уточнения соответствующий условий активизации.\n\n
        Задача организации, в особенности же рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития.
    </string>
    <string name="accession_agreement_label">Договор присоединения</string>
    <string name="accession_agreement_data">
         Значимость этих проблем настолько очевидна, что новая модель организационной деятельности влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации модели развития. Таким образом консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.\n\n
        Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет выполнять важные задания по разработке форм развития. Таким образом новая модель организационной деятельности влечет за собой процесс внедрения и модернизации систем массового участия. Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.\n\n
        Равным образом реализация намеченных плановых заданий требуют определения и уточнения форм развития. Разнообразный и богатый опыт реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Повседневная практика показывает, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий требуют определения и уточнения соответствующий условий активизации.\n\n
        Задача организации, в особенности же рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития.
    </string>
    <string name="refund_conditions_label">Условия возврата денежных средств</string>
    <string name="refund_conditions_data">
         Значимость этих проблем настолько очевидна, что новая модель организационной деятельности влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных задач. С другой стороны сложившаяся структура организации влечет за собой процесс внедрения и модернизации модели развития. Таким образом консультация с широким активом обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия.\n\n
        Идейные соображения высшего порядка, а также укрепление и развитие структуры позволяет выполнять важные задания по разработке форм развития. Таким образом новая модель организационной деятельности влечет за собой процесс внедрения и модернизации систем массового участия. Товарищи! постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий.\n\n
        Равным образом реализация намеченных плановых заданий требуют определения и уточнения форм развития. Разнообразный и богатый опыт реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Повседневная практика показывает, что укрепление и развитие структуры требуют от нас анализа дальнейших направлений развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий требуют определения и уточнения соответствующий условий активизации.\n\n
        Задача организации, в особенности же рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития.
   </string>
    <string name="login_user_agreement_confirm">Ознакомился и согласен</string>
    <string name="qr_scanner_take_scooter">Взять самокат</string>
    <string name="qr_scanner_hint">Наведите камеру на QR-код, или введите номер самоката</string>
    <string name="drivings_label">Поездки</string>
    <string name="drivings_input_code">Ввести номер самоката</string>
    <string name="drivings_inpit_hint">Вы можете найти его на передней панели самоката</string>
    <string name="drivings_active">Активные</string>
    <string name="drivings_history">История</string>
    <string name="drivings_cancelled">Отменён</string>
    <string name="scooter_booked">ЗАБРОНИРОВАН:</string>
    <string name="scooter_rented">АРЕНДА:</string>
    <string name="scooter_paused">ПАУЗА:</string>
    <string name="scooter_cancel_book">Отменить бронь</string>
    <string name="scooter_activate">Активировать</string>
    <string name="scooter_per_minute">в минуту</string>
    <string name="scooter_per_hour">в час</string>
    <string name="scooter_route">Маршрут</string>
    <string name="scooter_minute_pricing">Поминутный</string>
    <string name="scooter_hour_pricing">Почасовой</string>
    <string name="scooter_pause">Пауза</string>
    <string name="scooter_finish">Финиш</string>
    <string name="scooter_signal">Сигнал</string>
    <string name="scooter_open">Открыть</string>
    <string name="scooter_first_book">Забронировать</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_purse">Кошелёк</string>
    <string name="menu_drivings">Поездки</string>
    <string name="menu_promo">Промокод</string>
    <string name="menu_learn">Обучение</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_greeting">Привет, мы рады видеть тебя!</string>
    <string name="menu_balance">Баланс:</string>
    <string name="dialog_attention">Внимание</string>
    <string name="dialog_block_book">Вы превысили лимит бронирования. Бронь будет доступная через 24 часа. Пока вам доступна только активация.</string>
    <string name="dialog_balance">Пополнение баланса</string>
    <string name="dialog_balance_data">У вас недостаточно средств,  пополните баланс.</string>
    <string name="dialog_cancel">Отменить</string>
    <string name="dialog_add">Пополнить</string>
    <string name="dialog_ok">Ок</string>
    <string name="dialog_free_book_finished">Время бесплатной брони вышло. Далее бронь платная N руб/мин.</string>
</resources>