<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageButton
        android:id="@+id/imageButtonDrivingsListBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDrivingsListLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDrivingsListLabel"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_menu_icon_help" />

    <TextView
        android:id="@+id/textViewDrivingsListLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/drivings_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonDrivingsListBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#00FFFFFF"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDrivingsListLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewDrivingsListLabel"
        app:srcCompat="@drawable/ic_back_arrow" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2DrivingsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linnearLayoutSegmentContol"
        app:layout_constraintVertical_bias="1.0"></androidx.viewpager2.widget.ViewPager2>

    <ProgressBar
        android:id="@+id/progressBarDrivingsList"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:saveEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linnearLayoutSegmentContol"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_gray_segment_corner"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDrivingsListLabel">

        <Button
            android:id="@+id/buttonDrivingsListActive"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/ic_white_corners_with_border"
            android:elevation="4dp"
            android:text="@string/drivings_active"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="210dp" />

        <Button
            android:id="@+id/buttonDrivingsListHistory"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gray_segment_corner"
            android:text="@string/drivings_history"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="226dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>